# memorybot

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
memorybot/: __init__.py  __main__.py  main.py
memorybot/cogs/basic/: help.py  ping.py
memorybot/cogs/mention/: mention.py
memorybot/cogs/mgmt/: sync.py
memorybot/core/: __init__.py  bot.py  checks.py  config.py  loader.py  logging.py  runtime.py
memorybot/db/: models.py  repository.py  session.py
memorybot/prompt/: system_prompt.py
memorybot/schemas/: llm.py
memorybot/schemas/tools/: __init__.py  tavily.py
memorybot/scripts/: tavily_sample.py
memorybot/services/: openai_chat.py  tavily_search.py  tooling.py
memorybot/utils/: message_payload.py
