[project]
name = "memorybot"
version = "0.1.0"
description = "Modular Discord bot framework with cog autoloading and app command sync"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "discord.py>=2.4.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.1",
  "python-dotenv>=1.0.1",
]

[project.scripts]
memorybot = "memorybot.main:run"

[tool.uv]
dev-dependencies = []
package = true

[tool.uv.sources]

 
